# cdc-lakehouse-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
airflow/dags/: cdc_maintenance_dag.py  cdc_medallion_dag.py
configs/: tables.yml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/macros/: cents_to_dollars.sql
dbt/models/marts/: _marts.yml  customer_360.sql  dim_customer.sql  fct_sales.sql  fulfillment_sla.sql  inventory_health.sql  order_funnel.sql  revenue_by_segment.sql  revenue_daily.sql  sales_daily.sql
dbt/models/staging/: _sources.yml  stg_customers.sql  stg_inventory.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
dbt/tests/: assert_net_revenue_non_negative.sql
docker/: .dockerignore  Dockerfile.airflow  Dockerfile.app  Dockerfile.connect  Dockerfile.spark
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  FOLDER_STRUCTURE.md  HOW_IT_WORKS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-log-based-cdc-with-debezium.md  0003-iceberg-as-table-format.md  0004-exactly-once-via-idempotent-merge.md
docs/diagrams/: 01_system_architecture.mermaid  02_cdc_flow.mermaid  03_medallion.mermaid  04_sequence_exactly_once.mermaid  05_deployment.mermaid
docs/interview/: 01_cdc_debezium.md  02_kafka.md  03_spark_streaming.md  04_iceberg.md  05_modeling.md  06_system_design.md  README.md
great_expectations/expectations/: customers_suite.json  inventory_suite.json  orders_suite.json  payments_suite.json  products_suite.json
infra/debezium/: postgres-connector.json
infra/grafana/provisioning/dashboards/: cdc_pipeline.json  dashboards.yml
infra/postgres/init/: 01_schema.sql  02_replication.sql
infra/prometheus/: alerts.yml  prometheus.yml
infra/superset/: bootstrap.sh  dashboards.md  datasets.yaml  superset_config.py
infra/trino/: jvm.config
infra/trino/catalog/: lakehouse.properties  memory.properties
k8s/base/: configmap.yaml  hpa.yaml  kafka-connect-deployment.yaml  kafka-statefulset.yaml  kustomization.yaml  namespace.yaml  postgres-statefulset.yaml  secret.yaml  services.yaml  spark-streaming-deployment.yaml  trino-deployment.yaml
k8s/overlays/prod/: kustomization.yaml  replicas.yaml
k8s/overlays/staging/: kustomization.yaml  replicas.yaml
scripts/: register_connectors.sh  smoke_test.sh  submit_spark.sh
src/cdc_platform/: __init__.py
src/cdc_platform/common/: __init__.py  config.py  logging.py  metrics.py  retry.py  schema_registry.py  tables.py
src/cdc_platform/generators/: __init__.py  change_simulator.py  db.py  factories.py  seed_source.py
src/cdc_platform/ingestion/: __init__.py  connector_manager.py
src/cdc_platform/quality/: __init__.py  run_checkpoints.py  trino_validator.py
src/cdc_platform/streaming/: __init__.py  __main__.py  debezium.py  decode.py  engine.py  session.py
src/cdc_platform/streaming/bronze/: __init__.py  job.py
src/cdc_platform/streaming/gold/: __init__.py  job.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_connector_manager.py  test_factories.py  test_quality_runner.py  test_retry.py  test_tables_registry.py  test_trino_validator.py
(+2 files in other folders)
