[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-platform"
version = "1.0.0"
description = "Production-grade Change Data Capture lakehouse platform"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Data Engineering" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "requests>=2.31",
    # Lets modern PEP 604/585 annotations resolve on the Spark image's Python 3.8.
    "eval-type-backport>=0.2",
]

[project.optional-dependencies]
# Kept light so the Spark image doesn't pull compile-heavy native libs.
spark = ["pyspark==3.5.1"]
# Source-DB traffic generators / Kafka client (used by generators + tests).
ingest = ["faker>=24.0", "psycopg2-binary>=2.9", "confluent-kafka>=2.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.3",
    "types-psycopg2",
    "faker>=24.0",
    "psycopg2-binary>=2.9",
    "confluent-kafka>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "PL"]
ignore = ["PLR0913"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --cov=cdc_platform --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: require docker-compose services",
]
